package monad.proto;

option optimize_for = SPEED;

option java_package = "monad.protocol.internal";

option java_outer_classname = "CommandProto";

message BaseCommand {
  extensions 100 to max;
  /**
    internal_sync#SyncRequest  101
    internal_sync#SyncResponse 102
   */
}
