/**
 * 此文件主要定义了内部同步所需的接口，
 */
package monad.protocol.internal;

import "monad/rpc/protocol/command.proto";

option optimize_for = SPEED;

option java_package = "monad.protocol.internal";

option java_outer_classname = "InternalSyncProto";
/* 向Sync服务器发送同步请求 */
message SyncRequest {
  extend monad.rpc.protocol.BaseCommand {
    optional SyncRequest cmd = 101;
  }
  //资源名称
  required string resource_name = 1;
  //数据分区ID
  required int32 partition_id = 2;
  //同步的序列号的其实位置,读取日志的时候，要大于等于这个值
  required int64 log_seq_from = 3;
  //同步的数据长度
  optional int32 size = 4 [default = 1000];
}
/* 响应同步请求，发送同步数据 */
message SyncResponse {
  extend monad.rpc.protocol.BaseCommand {
    optional SyncResponse cmd = 102;
  }
  message ResponseData {
    required bytes binlog_value = 1;
  }
  //资源名称
  required string resource_name = 1;
  //分区ID
  required int32 partition_id = 2;
  //binlog的值
  repeated ResponseData response_data = 3;
  //原始数据
  //发送给客户端的消息
  optional bytes message = 4;
}
